Convenience Plugin:  Clicking on rows in syslog output to highlight them should work more reliably now. Convenience Plugin:  There are now controls in the preferences panel to enable or disable individual conveniences. gateone.js:  A few tweaks to pastearea events to make them more reliable. gateone.js:  Made some minor tweaks to the SVG icons to work around the browser bugs that can make them disappear when various events occur. gateone.js:  Fixed a minor bug where terminal dimensions weren't being sent properly after saving preferences. CSS Themes:  Added a max-height to the .panel class to ensure that a scrollbar will appear if the browser window is too small to fit a panel.

--- a/gateone/templates/themes/white.css
+++ b/gateone/templates/themes/white.css
@@ -411,6 +411,7 @@ hr {
     font-size: 1em;
     margin-top: 0.1em;
     margin-bottom: 0.1em;
+    max-height: 90%; /* Ensures a scrollbar will appear if the browser window is too small to fit a panel */
     -webkit-transform: scale(0);
     -webkit-transform-origin: top right;
     -webkit-transition: all 0.5s ease-in-out;
